# engine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .oclint  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE.md  Makefile  README.md  appveyor.yml  config.json
ci/appveyor/: build.bat  install.bat
ci/travis/: deploy_website.sh  linux_cmake.sh  script_unix.sh
ci/travis/keys/: deploy_key.enc
cmake/modules/: ClangFormat.cmake  ClangTidy.cmake  CodeCoverage.cmake  CppCheck.cmake  FetchAnax.cmake  FetchGtest.cmake  FetchJsonCpp.cmake  FetchSpdlog.cmake  FetchWinkSignals.cmake  OcLint.cmake
data/: world.json
data/level/: frozen_lake.json
data/level/tilesets/: collision.json  frozen_lake.json
inc/common/: exception.hpp  json.hpp  logging.hpp  math.hpp
inc/core/: example_module.hpp
inc/sdl/: wrap.hpp
inc/sdl_wrap/: wrap.hpp
resources/tiles/: collision.ase  frozen_lake.ase
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  exception.cpp  json.cpp  logging.cpp  math.cpp
src/components/: CMakeLists.txt  ai.cpp  ai.hpp  camera.hpp  collision.hpp  components.hpp  id.hpp  names.cpp  player.hpp  render.hpp  transform.hpp  velocity.hpp
src/core/: CMakeLists.txt  application.cpp  application.hpp  configuration.cpp  configuration.hpp  data.cpp  data.hpp  events.hpp  example_module.cpp  exception.cpp  exception.hpp  json.cpp  json.hpp  level.cpp  level.hpp  logging.cpp  logging.hpp  math.cpp  math.hpp  resource_manager.cpp  resource_manager.hpp  resourcemanager.cpp  resourcemanager.hpp  world.cpp  world.hpp
src/sdl/: CMakeLists.txt  wrap.cpp
src/sdl_wrap/: CMakeLists.txt  wrap.cpp
src/systems/: CMakeLists.txt  ai.cpp  ai.hpp  collision.cpp  collision.hpp  hockey.cpp  hockey.hpp  movement.cpp  movement.hpp  movementsystem.cpp  movementsystem.hpp  player_input.cpp  player_input.hpp  playerinputsystem.cpp  playerinputsystem.hpp  render.cpp  render.hpp  rendersystem.cpp  rendersystem.hpp  systems.cpp  systems.hpp
src/tools/: CMakeLists.txt  jsoncheck.cpp
test/: CMakeLists.txt  test_main.cpp
test/common/: CMakeLists.txt  math.cpp
test/core/: CMakeLists.txt  example_module.cpp  math.cpp
test/systems/: CMakeLists.txt  ai.cpp
tools/: json_check.sh
tools/ansible/: README.md  site.yml
tools/ansible/roles/sdl/vars/: main.yml
travis/: before-install_linux.sh  check_clang_format.sh  check_json_format.sh  install_linux.sh  linux_cmake.sh  script_linux.sh  script_unix.sh
